tests/errors/surf_num_04.ki
# Zero thrown to a negative power is undefined and must throw.
discard 0 ** -1
